[package]
name = "crud"
version = "0.1.0"
authors = ["Allan Jorge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0.111"
serde_json = "1.0"
serde_derive = "1.0.111"
anyhow = "1.0.31"
rusqlite = "0.23.1"
